--- a/src/jade/templates/sections/_detailed_plan_card.jade
+++ b/src/jade/templates/sections/_detailed_plan_card.jade
@@ -1,5 +1,7 @@
 section#detailed-plan
 	.container
+		.heading.text-center
+			h1.text-uppercase Choose a plan
 		.row.text-center
 			-for (i=0; i<3; i++)
 				.col-md-4
