--- a/src/jade/templates/sections/_site_migration.jade
+++ b/src/jade/templates/sections/_site_migration.jade
@@ -24,11 +24,7 @@ section#site-migration.mt-50
 						li 3.&nbsp; Wait for Completion
 				.start-migrate
 					h4.txt-color.text-capitalize get started
-					a.btn.btn-primary(href="#detailed-plan") choose a plan
+					a.btn.btn-primary.text-capitalize(href="#detailed-plan") choose a plan
 				.question-about-migrate
 					h4.txt-color Questions?
-					a(href=topMenu[2]['url'], class="#{topMenu[2]['class']} btn btn-primary") call us
-		.text-center
-			p.email-migration
-				sup *
-				|Email accounts only included with cPanel migrations. Non-cPanel migrations may require email to be manually migrated.
+					a(href=topMenu[2]['url'], class="#{topMenu[2]['class']} btn btn-primary text-uppercase") call us
