--- a/src/sass/includes/_coloring.sass
+++ b/src/sass/includes/_coloring.sass
@@ -8,6 +8,11 @@
 	background: $white !important
 	color: $darkest-gray !important
 
+.yes
+	color: #30e028
+.no
+	color: red
+
 
 .gray-bg
 	background-color: $light-gray
