--- a/src/sass/includes/_plans.sass
+++ b/src/sass/includes/_plans.sass
@@ -3,6 +3,8 @@
 	border-radius: 8px
 	padding: 15px 10px 25px
 	position: relative
+	.small-plan-offer
+		margin-bottom: 10px
 
 .each-small-pricing:not(last-child)
 	margin-bottom: 20px
@@ -22,7 +24,8 @@ $best_pseudo_left_right: 84px
 
 
 #small-pricing
-	margin-top: 100px
+	margin-top: 50px
+	padding-top: 100px
 	.each-small-plan-parent
 		$pad-l-r: 5px
 		padding-left: $pad-l-r
@@ -133,6 +136,7 @@ $small-plan-name-margin-top: 50px
 	
 	
 #detailed-plan
+	padding-top: 50px
 	.plan-table-parent
 		overflow-x: auto
 	tr
