--- a/src/sass/includes/_migration.sass
+++ b/src/sass/includes/_migration.sass
@@ -1,13 +1,17 @@
 #site-migration
+	margin-bottom: 60px
 	.migration-map-img
 		img
-			height: 270px
+			height: 255px
 	.migration-details
 		.nav>li
 			padding: 5px 5px
 			img
-				width: 35px
+				width: 50px
 				padding-right: 5px
+			span
+				font-size: 18px
+				margin-left: 10px
 	.email-migration
 		margin-top: 20px
 		font-size: 12px
