added login and contact pages and updated more data (5)

--- a/src/jade/templates/__required.jade
+++ b/src/jade/templates/__required.jade
@@ -43,7 +43,7 @@
 		["features" , "#features"],
 		["service" , "#service"],
 		["buy" , "#detailed-plan"],
-		["benifits" , "#site-migration"]
+		["benefits" , "#site-migration"]
 	]
 
 
@@ -107,19 +107,19 @@ mixin PlanTitle (_iteration)
 		{
 		"badge": " ",
 		"planType" : planType[1],
-		"planDetails" : "shared hosting for all skill levels",
+		"planDetails" : "Fast and Simple",
 		"discount" : 30,
 		"price" : 1000
 		},{
 		"badge": "Top Seller",
 		"planType" : planType[2],
-		"planDetails" : "shared hosting for all skill levels",
+		"planDetails" : "Packed with Power",
 		"discount" : 40,
 		"price" : 2000
 		},{
 		"badge": "Best value",
 		"planType" : planType[3],
-		"planDetails" : "shared hosting for all skill levels",
+		"planDetails" : "Ultimate Robust Performer",
 		"discount" : 50,
 		"price" : 3500
 		}
@@ -170,7 +170,7 @@ mixin PlanTitle (_iteration)
 			"imgUrl" : serviceImgUrlPrefix + "auto-backup.png",
 			"content" : "Plesk backup system provides easier process for a quick backup of your valuable files"
 		},{
-			"imgUrl" : serviceImgUrlPrefix + "cpanel.png",
+			"imgUrl" : serviceImgUrlPrefix + "plesk.png",
 			"content" : "Spend less time spent on tedious admin and manual server tasks"
 		},{
 			"imgUrl" : serviceImgUrlPrefix + "database.png",
@@ -222,9 +222,8 @@ mixin PlanTitle (_iteration)
 //- footer social links (usage in font awesome)
 -
 	var social_links = [
-		"facebook",
-		"twitter",
-		"skype"
+		["facebook", "www.fb.com/oikik"],
+		["skype", "skype:buno047?call"]
 	]
 
 
@@ -237,7 +236,11 @@ mixin PlanTitle (_iteration)
 		["phpmyadmin" , "Fast and easier database management"],
 		["email" , "Unlimited and Quicker Plesk Email"],
 		["ecommerce" , "Use eCommerce with reliability"],
-		["mysql" , "Faster Mysql Database Performance"]
+		["mysql" , "Faster Mysql Database Performance"],
+		["nginx" , "Try the Faster and Efficient server"],
+		["docker" , "Run and Manage apps side-by-side in isolated containers"],
+		["nodejs" , "Lightweight and efficient JavaScript runtime"],
+		["postgresql" , "Your Robust Database Solution"]
 	]
 
 
