--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -36,7 +36,8 @@ img
 @import "includes/coloring"
 
 @import "includes/header"
-//@import "includes/banner"
+@import "includes/contact"
+@import "includes/login"
 @import "includes/banner_static"
 @import "includes/plans"
 @import "includes/feature"
