--- a/src/jade/templates/_header.jade
+++ b/src/jade/templates/_header.jade
@@ -2,7 +2,7 @@ header
 	nav.navbar.top-most-menu
 		.container
 			.navbar-header.logo
-				a.navbar-brand(href="#")
+				a.navbar-brand(href="//oikik.io")
 					img(src=logoUrl)
 			.text-center
 				ul.nav.navbar-nav.navbar-right
