--- a/src/jade/login.jade
+++ b/src/jade/login.jade
@@ -1,9 +1,9 @@
-//include templates/__doctype_and_variables
 doctype html
 
 html(lang="en")
 	include templates/__head
 
+	+ChangeMenuHref()
 
 	body(id= "#{mainColor}")
 
