--- a/src/jade/templates/__required.jade
+++ b/src/jade/templates/__required.jade
@@ -227,7 +227,7 @@ mixin PlanTitle (_iteration)
 //- footer social links (usage in font awesome)
 -
 	var social_links = [
-		["facebook", "www.fb.com/oikik"],
+		["facebook", "//www.fb.com/oikik"],
 		["skype", "skype:buno047?call"]
 	]
 
