removed unused js file

--- a/src/jade/templates/_footer.jade
+++ b/src/jade/templates/_footer.jade
@@ -10,7 +10,7 @@ footer
 				ul.nav
 					each _social in social_links
 						li
-							a.transition(href = _social[1])
+							a.transition(href = _social[1],target="_blank")
 								i(class="fa fa-#{_social[0]}")
 
 script(src=mainJS)
