small modifications in footer and website migration section

--- a/src/jade/templates/_footer.jade
+++ b/src/jade/templates/_footer.jade
@@ -2,11 +2,11 @@ footer
 	.container
 		.row
 			.col-md-6
-				.copyright.text-center
+				.copyright.text-left
 					p  All rights reserved to&nbsp
 						span copyright © 2017&nbsp
 							a(href="mailto:contact@oikik.io").text-uppercase oikik hosting
-			.col-md-6.text-center
+			.col-md-6.text-right
 				ul.nav
 					each _social in social_links
 						li
