--- a/src/jade/templates/sections/_site_migration.jade
+++ b/src/jade/templates/sections/_site_migration.jade
@@ -1,4 +1,4 @@
-section#site-migration.mt-50
+section#site-migration.mt-50.dark-bg
 	.container
 		.heading.text-center
 			h1.text-uppercase Smooth Website Migration
