previous commits added in source files(previously done in build files)

--- a/src/jade/templates/__required.jade
+++ b/src/jade/templates/__required.jade
@@ -54,7 +54,7 @@ mixin ChangeMenuHref ()
 
 
 //- banner data
--var bannerMainText = "Your Ultimate Hight Performance SSD server"
+-var bannerMainText = "Your Ultimate High Performance SSD server"
 -var bannerSubHeading1 = ' Web Hosting made easy'
 -var bannerSubHeadingHighlighted = ''
 -var bannerSubHeading3 = ''
@@ -79,11 +79,11 @@ mixin ChangeMenuHref ()
 		["Disk Space", "3 GB", "8 GB", "15 GB"],
 		["Dedicated RAM", "1 GB", "2 GB", "4 GB"],
 		["Domains", "2", "5", "10"],
-		["Sub-Domains", "4", "10", "Unlimited"],
-		["MySQL & PostgreSQL", "10", "Unlimited", "Unlimited"],
+		["Sub-Domains", "4", "10", "20"],
+		["MySQL & PostgreSQL", "10", "20", "30"],
 		["Email Accounts", "Unlimited", "Unlimited", "Unlimited"],
 		["Plesk", true, true, true],
-		["SSH Access", false, true, true],
+		["SSH Access", true, true, true],
 		["Backup", true, true, true],
 		["Spam Filter", true, true, true],
 		["Malware Protection", true, true, true],
