--- a/src/jade/templates/_footer.jade
+++ b/src/jade/templates/_footer.jade
@@ -6,7 +6,10 @@ footer
 					p  All rights reserved to&nbsp
 						span copyright © 2017&nbsp
 							a(href="mailto:contact@oikik.io").text-uppercase oikik hosting
-			.col-md-6.text-right
+					p  A concern of&nbsp
+						a(href="//vimmaniac.com/") vimmaniac
+						|&nbsp pvt ltd
+			.col-md-6.text-right(style="margin-top:7px")
 				ul.nav
 					each _social in social_links
 						li
