--- a/src/jade/templates/__head.jade
+++ b/src/jade/templates/__head.jade
@@ -3,6 +3,25 @@ include __required
 head
 	meta(charset="UTF-8")
 	meta(name="viewport",content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no")
+	meta(name="keywords",content="Hosting, Web Hosting, SSD Server, Migration, WordPress, PHP, HTML, Server, Hosting Plans, MySql, Plesk, SSH Access, Bangladesh, NodeJs, Postgresql, eCommerce")
+	meta(name="description",content="Oikik Hosting - Ultimate High Performance SSD server")
+	meta(name="author",content="Vimmaniac Pvt Ltd")
+	meta(property="og:image",content="http://oikik.io/img/oikik_banner.jpg")
+	meta(property="og:type",content="website")
+	meta(property="og:title",content="Oikik Hosting")
+	meta(property="og:description" content="Oikik Hosting - Ultimate High Performance SSD server")
+	meta(property="og:site_name" content="Oikik Hosting")
+	meta(property="og:url" content="http://oikik.io")
+
+	|<script>
+	|	(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+	|	(i[r].q=i[r].q || []).push(arguments)},i[r].l=1 * new Date();a=s.createElement(o),
+	|	m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+	|	})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+	|	ga('create', 'UA-102037230-1', 'auto');
+	|	ga('send', 'pageview');
+	|</script>
+	meta(name="google-site-verification" content="xnK9IrriTAzqw-0GvAnECanFpnPDO49g2P1iKg5Ripk")
 
 	title=pageTitle
 	link(rel="stylesheet", href=mainCss)
