improved spelling && ignored subdomain files

--- a/src/jade/templates/__required.jade
+++ b/src/jade/templates/__required.jade
@@ -45,7 +45,7 @@
 		["buy" , "#detailed-plan"],
 		["benefits" , "#site-migration"],
 		["blog" , "//blog.oikik.io/"],
-		["knowledge base" , "//knwoledgebase.oikik.io/"],
+		["knowledge base" , "//knowledgebase.oikik.io/"],
 	]
 
 mixin ChangeMenuHref ()
